--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website.test</title>
+    <link rel="style.css" href="">
 </head>
 <body>
     
     <div>Hewas</div>
+    
 </body>
 </html>
