--- a/selectors.html
+++ b/selectors.html
@@ -5,24 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    
     <style>
-            /* Element Selector */
+        body {
+         background-image:linear-gradient(40deg, rgb(19, 18, 18), rgb(47, 46, 46));
 
-          /*  div{
-                position: middle;
-                font-size: 24px;
-                background-color: turquoise;
-                border: 1px;
-                border-style: solid;
-                border-radius: 20px;
-            }*/
+        }
+        </style>
 
     </style>
 </head>
 <body>
-   <div class="heading">Home</div>
-   
+   <div class="heading">real_hakan</div>
+   <div class="box1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+    sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+     rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
 
-   <button type="button" class="iconhome" ><img src="img/homebuttom.png" width ="20px"></button>
+   <a type="button" class="iconhome" href="nolur.com"><img src="img/homebuttom.png" width ="20vw"></a>
+
+   <div class="box2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+    sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+     rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+
+     <div class="kaufbutton"><span></span>
+    <div class="warenkorb"><img src="img/warenkorb.png" width="40vw"></div>
+    
+    </div>
 </body>
 </html>
