--- a/003_Position/index.html
+++ b/003_Position/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>003 - Position</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    
 
     <div class="eins">eins</div>
     <div class="zwei">zwei</div>
     <div class="drei">drei</div>
-    <div class="mainbox">Ich LIEBE SIE </div>
-    
-</body>
+    <div class="mainbox">Ich LIEBE SIE
+        <li>Hi</li>
+        <li>Hi</li>
+        <li>Hi</li>
+        <li>Hi</li>
+    </div>
+  </body>
 </html>
