--- a/004 - Cssreset/index.html
+++ b/004 - Cssreset/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    
+</style>
 <body>
-    <div class="eins">rechts</div>
-    <div class="zwei">links</div>
-    <div class="drei">oben</div>
+    <div class="eins">rechts oben</div>
+    <div class="zwei">links oben</div>
+    <div class="drei">links unten</div>
 </body>
 </html>
