--- a/006A_01_Übung/index.html
+++ b/006A_01_Übung/index.html
@@ -14,5 +14,17 @@
         <div class="box1"></div>
     </div>
 
+    <div class="textbox">willkommen!
+        <div class="innerbox"></div>
+        <div class="text">eins</div>
+        <div class="text">zwei</div>
+        <div class="text">drei</div>
+    </div>
+
+    <div class="box3"></div>
+
+
+    
+
   </body>
 </html>
