--- a/Übung4/index.html
+++ b/Übung4/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Übung4</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="header">
-        <div class="kleineboxen"></div>
-        <div class="kleineboxen2">
-            <div class="kleineboxen3"></div>
-        </div>
-        <div class="kleineboxen4">
-            <div class="kleineboxen5"></div>
-        </div>
-        
+      <div class="kleineboxen"></div>
+      <div class="kleineboxen2">
+        <div class="kleineboxen3"></div>
+      </div>
+      <div class="kleineboxen4">
+        <div class="kleineboxen5"></div>
+      </div>
     </div>
-    <div class="box1"><div class="text1">XY</div>
-</div>
+    <div class="box1"><div class="text1">XY</div></div>
     <div class="box2"></div>
-</body>
+  </body>
 </html>
