--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website.test</title>
-    <link rel="style.css" href="">
+<style>
+    .row {
+        display: flex;
+    }
+
+    .box {
+        width: 100px;
+        height: 100px;
+        background-color: lightblue;
+        margin: 10px;
+    }
+</style>
 </head>
 <body>
-    
-    <div>Hewas</div>
-    
+
+<div class="row">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
 </body>
 </html>
